--- a/expresso-shop-product/values.yaml
+++ b/expresso-shop-product/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 3
 
 image:
-  repository: hossambarakat/espresso-shop-product-catalog
+  repository: nginx:alpine #hossambarakat/espresso-shop-product-catalog
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest" #
